# AK2TP_Projekt

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  dokumentace.html  package-lock.json  package.json
.github/workflows/: deploy.yaml
assets/: tailwind.css
src/: algorithms.rs  ean13.rs  iban.rs  iban_page.rs  iban_page_old.rs  ico.rs  isbn.rs  luhn.rs  main.rs  mrz.rs  rodne_cislo.rs  rodne_cislo_old.rs
