[package]
name = "ak2tp-projekt"
version = "0.1.0"
authors = ["PierreGordo <peter.gardas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barcoders = "2.0.0"
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
iban = "0.2.0"
tracing = "0.1.44"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
